--- a/src/styles/livros.scss
+++ b/src/styles/livros.scss
@@ -62,6 +62,7 @@
                 &__content {
                     padding: 5px;
                     text-align: center;
+                    margin: 10px;
             
                     a {
                         text-decoration: none;
@@ -85,7 +86,6 @@
                         color: $white;
                         background: $yellow;
                         padding: 5px;
-                        margin-top: 100px;
                     }
                 }
 
