--- a/src/styles/livros.scss
+++ b/src/styles/livros.scss
@@ -39,7 +39,8 @@
 
             
             .card {
-                min-width: 155px;
+                min-width: 170px;
+                width: 24%;
                 height: auto;
                 border: 1px solid $gray;
                 gap: 10px;
