--- a/src/styles/livros.scss
+++ b/src/styles/livros.scss
@@ -44,6 +44,7 @@
                 height: auto;
                 border: 1px solid $gray;
                 gap: 10px;
+                flex: auto;
 
                 .card__image {
                     background: $gray;
