--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 80px auto;
+    margin: auto auto 60px auto;
     &__title {
         color: $yellow;
         text-align: center;
@@ -13,6 +13,7 @@
 
     &__body {
         background: $gray;
+        max-width: 100vw;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -39,6 +40,12 @@
             align-items: center;
             justify-content: space-around;
 
+            @media(max-width: 960px) {
+                align-items: start;
+                justify-content: center;
+                flex-direction: column;
+            }
+ 
             .radio {
                 display: flex;
                 align-items: center;
@@ -92,6 +99,23 @@
             margin: auto;
             position: relative;
             bottom: -35px;
+        }
+
+        .link1, .link2 {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .link1 a{
+            border: 1px solid $yellow;
+            padding:  10px;
+            color: $yellow;
+            text-decoration: none;
+            border-radius: 10px;
+        }
+
+        .link2 a{
+            color: $red;
         }
     }
 }
