--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -33,9 +33,7 @@
         border-bottom-left-radius: 10px;
         padding: 0 20px 10px 20px;
         height: 325px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        overflow-y: auto;
 
         .card {
             background: $gray;
@@ -45,6 +43,7 @@
             border-radius: 10px;
             position: relative;
             padding: 10px;
+            margin: 50px 0;
 
             h5 {
                 font-weight: 700;
