--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 *:not(main) {
     margin: 0;
     padding: 0;
@@ -24,5 +26,20 @@ main {
 
 img {
     width: 100%;
+}
+
+.button {
+    background: $yellow;
+    color: $white;
+    border: 1px solid $yellow;
+    padding: 10px;
+    font-size: 2rem;
+    font-weight: 700;
+    border-radius: 10px;
+    max-width: 100%;
+    min-width: 30%;
+    margin: auto;
+    position: relative;
+    bottom: -35px;
 }
 
