--- a/src/styles/livros.scss
+++ b/src/styles/livros.scss
@@ -32,19 +32,17 @@
 
         &__cards {
             padding: 8px;
-            border: 1px solid $gray;
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 20px;
 
             
             .card {
-                min-width: 170px;
-                width: 24%;
+                width: 300px;
                 height: auto;
-                border: 1px solid $gray;
                 gap: 10px;
                 flex: auto;
+                box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
 
                 .card__image {
                     background: $gray;
@@ -52,7 +50,7 @@
                     align-items: center;
                     justify-content: center;
                     width: 100%;
-                    height: 120px;
+                    height: 150px;
 
                     img {
                         width: 78px;
@@ -87,7 +85,9 @@
                         font-weight: bold;
                         color: $white;
                         background: $yellow;
-                        padding: 5px;
+                        padding: 10px;
+                        position: relative;
+                        top: 0;
                     }
                 }
 
