--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -16,8 +16,9 @@
         max-width: 100vw;
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         flex-direction: column;
+        flex-wrap: wrap;
         padding: 25px 50px 0px 50px;
 
         p {
@@ -26,13 +27,14 @@
             margin: 10px 0;
         }
 
-        input {
+        input,select {
             margin: 20px 0;
             height: 49px;
             padding: 10px;
             box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
             border: none;
-            color: $gray;
+            color: $black;
+            border-radius: 10px;
         }
 
         .radios {
