--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -12,7 +12,7 @@
     }
 
     &__body {
-        background: $gray;
+        background: $blue2;
         max-width: 100vw;
         width: 100%;
         display: flex;
@@ -20,6 +20,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         padding: 25px 50px 0px 50px;
+        border-radius: 8px;
 
         p {
             color: $yellow;
@@ -27,14 +28,25 @@
             margin: 10px 0;
         }
 
+        hr{
+            border: 10px solid $yellow;
+            color: $yellow;
+            margin:20px;
+        }
+
         input,select {
-            margin: 20px 0;
+            margin: 0;
             height: 49px;
             padding: 10px;
             box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
             border: none;
             color: $black;
             border-radius: 10px;
+        }
+
+        label{
+            font-weight: 700;
+            color: $yellow;
         }
 
         .radios {
