--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -117,5 +117,24 @@
         .link2 a{
             color: $red;
         }
+
+        &__button{
+            margin: 0;
+            margin-top: 10px;
+            height: 49px;
+            padding: 10px;
+            box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
+            border: none;
+            border-radius: 10px;
+            font-weight: 700;
+            background-color: $blue1;
+            color: $yellow;
+        }
+
+        &__btngroup{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
     }
 }
