--- a/src/styles/loginForm.scss
+++ b/src/styles/loginForm.scss
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: center;
     z-index: 2;
+    border-radius: 20px;
 
     .boxMessage {
         background: $blue1;
@@ -47,6 +48,7 @@
             box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
             border: none;
             color: $gray;
+            border-radius: 8px;
         }
         
     }
