--- a/src/styles/enderecosForm.scss
+++ b/src/styles/enderecosForm.scss
@@ -6,6 +6,11 @@
     border-radius: 20px;
     padding: 10px;
     gap: 10px;
+    &__index{
+        text-align: center;
+        color:$yellow;
+        font-weight: 700;
+    }
     &__tipos{
         display:grid;
         grid-template-columns: 1fr;
