att enderecos detalhes

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -133,7 +133,7 @@
 
         &__btngroup{
             display:grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
             gap: 10px;
         }
     }
