--- a/src/styles/enderecosForm.scss
+++ b/src/styles/enderecosForm.scss
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr;
     border-radius: 20px;
     padding: 10px;
+    margin-top: 20px;
     gap: 10px;
     &__index{
         text-align: center;
