--- a/src/styles/dadosPessoais.scss
+++ b/src/styles/dadosPessoais.scss
@@ -14,7 +14,12 @@
     }
     &__usuario{
         display:grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+    }
+    &__pessoa{
+        display:grid;
+        grid-template-columns: 2fr 4fr 4fr 2fr;
         gap: 10px;
     }
 }
