--- a/src/styles/dadosPessoais.scss
+++ b/src/styles/dadosPessoais.scss
@@ -9,7 +9,7 @@
     }
     &__outros{
         display:grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 11fr 1fr 10fr;
         gap: 10px;
     }
     &__usuario{
