att form detalhes da conta

--- a/src/styles/enderecosForm.scss
+++ b/src/styles/enderecosForm.scss
@@ -14,7 +14,7 @@
     }
     &__tipos{
         display:grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         gap: 10px;
     }
     &__outros{
@@ -26,5 +26,10 @@
         display:grid;
         grid-template-columns: 3fr 1fr;
         gap: 10px;
+    }
+    .labeled__input{
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 25px 1fr;
     }
 }
