--- a/src/styles/dadosPessoais.scss
+++ b/src/styles/dadosPessoais.scss
@@ -1,25 +1,75 @@
-.dados__pessoais{
-    display:grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    &__nome{
+.cliente__form__cadastro {
+    .dados__pessoais{
         display:grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr;
         gap: 10px;
+        &__nome{
+            display:grid;
+            grid-template-columns: 1fr 3fr;
+            gap: 10px;
+        }
+        &__outros{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        &__usuario{
+            display:grid;
+            grid-template-columns: 1fr 1fr 50%;
+            gap: 10px;
+        }
+        &__telefone{
+            display:grid;
+            grid-template-columns: 1fr 4fr 50%;
+            gap: 10px;
+        }
+        &__pessoa{
+            display:grid;
+            grid-template-columns: 2fr 4fr 4fr 2fr;
+            gap: 10px;
+        }
+        .labeled__input{
+            display:grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 25px 1fr;
+        }
     }
-    &__outros{
+}
+
+.cliente__form__alterar {
+    .dados__pessoais{
         display:grid;
-        grid-template-columns: 11fr 1fr 10fr;
+        grid-template-columns: 1fr;
         gap: 10px;
-    }
-    &__usuario{
-        display:grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 10px;
-    }
-    &__pessoa{
-        display:grid;
-        grid-template-columns: 2fr 4fr 4fr 2fr;
-        gap: 10px;
+        &__nome{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        &__outros{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        &__telefone{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        &__usuario{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        &__pessoa{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        .labeled__input{
+            display:grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 25px 1fr;
+        }
     }
 }
