--- a/src/styles/loginForm.scss
+++ b/src/styles/loginForm.scss
@@ -47,7 +47,7 @@
             padding: 10px;
             box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
             border: none;
-            color: $gray;
+            color: $black;
             border-radius: 8px;
         }
         
