--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $blue1: #121922;
 $blue2: #232F3E;
 $blue3: #6c757d;
 $yellow: #F08804;
+$greyishBlue:#101c27;
 $white: #FFFFFF;
 $gray: #D3D3D3;
 $black: #000000;
