--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -44,6 +44,7 @@
             border-radius: 10px;
         }
 
+        
         label{
             font-weight: 700;
             color: $yellow;
@@ -138,3 +139,40 @@
         }
     }
 }
+
+
+@media screen and (max-width: 900px){
+    .form__body{
+
+        label{
+            font-size: 10px!important;
+        }
+
+        input,select {
+            margin: 0px;
+            height: 38px;
+            padding: 6px;
+            box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.4);
+            border: none;
+            color: $black;
+            border-radius: 10px;
+        }
+    }
+
+    .dados__pessoais{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 7px;
+        div{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 7px;
+        }
+        .labeled__input{
+            display:grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 30px 1fr;
+        }
+    }
+
+} 
