--- a/src/styles/loginFormCarrinho.scss
+++ b/src/styles/loginFormCarrinho.scss
@@ -1,12 +1,7 @@
 @import 'variables';
 
-.login__form {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(196, 196, 196, 0.4);
+.login__form__carrinho {
+    margin: 108px 0;
     display: flex;
     align-items: center;
     justify-content: center;
