--- a/src/styles/carrinhoDeCompras.scss
+++ b/src/styles/carrinhoDeCompras.scss
@@ -75,6 +75,27 @@
                 }
             }
 
+            form {
+                .formasDePagamento {
+                    .formaDePagamento__cartoes, .formaDePagamento__cupons {
+                        overflow-y: auto;
+                        height: 110px;
+                        margin: 10px 0;
+
+                        button {
+                            margin: 10px 0;
+                        }
+
+                        input, select {
+                            width: 100%;
+                            margin-bottom: 10px;
+
+                        }
+                    }
+                    
+                }
+            }
+
         }
 
         .total_carrinho {
