--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -18,7 +18,7 @@
     }
     p {
         font-size: 14px;
-        text-align: justify;
+        text-align: center;
         margin: auto;
         max-width: 20ch;
         overflow: hidden;
