--- a/src/styles/carrinhoDeCompras.scss
+++ b/src/styles/carrinhoDeCompras.scss
@@ -2,6 +2,7 @@
     .row {
         .produtos {
             .produto {
+                position: relative;
                 padding: 10px;
                 width: 100%;
                 display: flex;
@@ -29,6 +30,18 @@
 
                 .produto_preco {
                    width: 30%;
+                }
+
+                .close {
+                    cursor: pointer;
+                    position: absolute;
+                    top: 15px;
+                    right: 15px;
+                    background: url('../assets/images/x.png');
+                    background-size: cover;
+                    width: 20px;
+                    height: 20px;
+                    z-index: 1;
                 }
 
             }
@@ -77,7 +90,6 @@
 
             form {
                 .formasDePagamento {
-                    .formaDePagamento__cartoes, .formaDePagamento__cupons {
                         overflow-y: auto;
                         height: 110px;
                         margin: 10px 0;
@@ -90,7 +102,6 @@
                             width: 100%;
                             margin-bottom: 10px;
 
-                        }
                     }
                     
                 }
