--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.modal {
+.modal-custom {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -14,18 +14,27 @@
 
     .boxMessage {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
         background: $white;
-        padding: 40px;
+        padding: 10px;
         margin: 0;
+        width: 100%;
         max-width: 500px;
         border-radius: 10px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        h1 {
+        p {
             text-align: center;
-            margin-bottom: 22px;
             color: $yellow;
+        }
+
+        button {
+            position: relative;
+            font-size: 18px;
+            bottom: 0;
+            margin: 0;
+            width: 15%;
         }
         
     }
